@@ -1043,6 +1043,10 @@ SCIP_RETCODE generateOddCycleCut(
       if( *result == SCIP_DIDNOTFIND )
          *result = SCIP_SEPARATED;
 
+#ifdef SCIP_OUTPUT
+      SCIP_CALL( SCIPprintRow(scip, cut, NULL) );
+#endif
+
       assert(*result == SCIP_SEPARATED || *result == SCIP_REDUCEDDOM);
    }
 
@@ -1445,7 +1449,7 @@ SCIP_RETCODE addNextLevelBinImpls(
       varsidx = u - nbinvars;
    }
    assert(varsidx < nbinvars);
-   assert(!SCIPisFeasIntegral(scip, vals[varsidx]));
+   assert(! SCIPisFeasIntegral(scip, vals[varsidx]) );
 
    /* get binary implications of the current variable */
    nbinimpls = (unsigned int) SCIPvarGetNBinImpls(vars[varsidx], varfixing);
@@ -1501,40 +1505,19 @@ SCIP_RETCODE addNextLevelBinImpls(
       {
          int tmp;
 
+         /* the computation of 1.0 - vals[v] if v is negated is ensured by the fact that v > nbinvars in this case */
          /* set weight of arc (x,y) to 1 - x* -y* */
          if( varfixing )
          {
-            /* x = 1 -> y <= 0 */
-            if( impltypes[j] == SCIP_BOUNDTYPE_UPPER )
-            {
-               tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - vals[varsidx] - vals[k]));
-               assert( tmp >= 0 );
-               weight = (unsigned int) MAX(tmp, sepadata->maxreference);
-            }
-            /* x = 1 -> y >= 1 <-> neg(y) <= 0 */
-            else
-            {
-               tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - vals[varsidx] - (1-vals[k])));
-               assert( tmp >= 0 );
-               weight = (unsigned int) MAX(tmp, sepadata->maxreference);
-            }
+            /* x = 1 -> y <= 0  or y >= 1, i.e., x + y <= 1  or  x + (1-y) <= 1 */
+            tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - vals[varsidx] - vals[v]));
+            weight = (unsigned int) MAX(tmp, sepadata->maxreference);
          }
          else
          {
-            /* x = 0 <-> neg(x) = 1 -> y <= 0 */
-            if( impltypes[j] == SCIP_BOUNDTYPE_UPPER )
-            {
-               tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - (1 - vals[varsidx]) - vals[k]));
-               assert( tmp >= 0 );
-               weight = (unsigned int) MAX(tmp, sepadata->maxreference);
-            }
-            /* x = 0 <-> neg(x) = 1 -> y >= 1 <-> neg(y) <= 0 */
-            else
-            {
-               tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - (1 - vals[varsidx]) - (1-vals[k])));
-               assert( tmp >= 0 );
-               weight = (unsigned int) MAX(tmp, sepadata->maxreference);
-            }
+            /* x = 0 <-> neg(x) = 1 -> y <= 0  or  y >= 1, i.e., (1-x) + y <= 1  or  (1-x) + (1-y) <= 1 */
+            tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - (1.0 - vals[varsidx]) - vals[v]));
+            weight = (unsigned int) MAX(tmp, sepadata->maxreference);
          }
 
          /* add arc from current to neighbor node */
@@ -1674,40 +1657,19 @@ SCIP_RETCODE addNextLevelCliques(
          {
             int tmp;
 
+            /* the computation of 1.0 - vals[v] if v is negated is ensured by the fact that v > nbinvars in this case */
             /* set weight of arc (x,y) to 1 - x* -y* */
             if( varfixing )
             {
-               /* x = 1 -> y <= 0 */
-               if( cliquevals[k] )
-               {
-                  tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1 - vals[varsidx] - vals[l]));
-                  assert( tmp >= 0 );
-                  weight = (unsigned int) MAX(tmp, sepadata->maxreference);
-               }
-               /* x = 1 -> y >= 1 <-> neg(y) <= 0 */
-               else
-               {
-                  tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1 - vals[varsidx] - (1-vals[l])));
-                  assert( tmp >= 0 );
-                  weight = (unsigned int) MAX(tmp, sepadata->maxreference);
-               }
+               /* x = 1 -> y <= 0  or  y >= 1 */
+               tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1 - vals[varsidx] - vals[v]));
+               weight = (unsigned int) MAX(tmp, sepadata->maxreference);
             }
             else
             {
-               /* x = 0 <-> neg(x) = 1 -> y <= 0 */
-               if( !cliquevals[k] )
-               {
-                  tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1 - (1 - vals[varsidx]) - vals[l]));
-                  assert( tmp >= 0 );
-                  weight = (unsigned int) MAX(tmp, sepadata->maxreference);
-               }
-               /* x = 0 <-> neg(x) = 1 -> y >= 1 <-> neg(y) <= 0 */
-               else
-               {
-                  tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1 - (1 - vals[varsidx]) - (1-vals[l])));
-                  assert( tmp >= 0 );
-                  weight = (unsigned int) MAX(tmp, sepadata->maxreference);
-               }
+               /* x = 0 <-> neg(x) = 1 -> y <= 0  or  y >= 1 */
+               tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - (1.0 - vals[varsidx]) - vals[v]));
+               weight = (unsigned int) MAX(tmp, sepadata->maxreference);
             }
 
             /* add arc from current to neighbor node */
@@ -1759,7 +1721,6 @@ SCIP_RETCODE insertSortedRootNeighbors(
    unsigned int nneighbors;
    SCIP_Bool* isneighbor;
    int* neighbors;
-   SCIP_Real* neighvals;
    SCIP_Real* sortvals;
 
    SCIP_Bool varfixing;
@@ -1803,7 +1764,8 @@ SCIP_RETCODE insertSortedRootNeighbors(
       varsidx = root - nbinvars;
    }
    assert(varsidx < nbinvars);
-   assert(!SCIPisFeasIntegral(scip, vals[varsidx]));
+   assert(! SCIPisFeasIntegral(scip, vals[varsidx]));
+   nneighbors = 0;
 
    /* count implications of the root */
    nbinimpls = (unsigned int) SCIPvarGetNBinImpls(vars[varsidx], varfixing);
@@ -1824,28 +1786,23 @@ SCIP_RETCODE insertSortedRootNeighbors(
          if( SCIPisFeasIntegral(scip, vals[jidx]))
             continue;
 
-         if( varfixing == TRUE)
+         /* implication x + y <= 1  or  (1-x) + y <= 1 */
+         if( impltypes[j] == SCIP_BOUNDTYPE_UPPER )
          {
-            /* implication x + y <= 1 */
-            if( impltypes[j] == SCIP_BOUNDTYPE_UPPER )
-               isneighbor[jidx] = TRUE;
-            /* implication x + neg(y) <= 1 */
-            else
+            if ( ! isneighbor[jidx] )
             {
-               assert(impltypes[j] == SCIP_BOUNDTYPE_LOWER);
-               isneighbor[jidx+nbinvars] = TRUE;
+               ++nneighbors;
+               isneighbor[jidx] = TRUE;
             }
          }
+         /* implication x + (1-y) <= 1  or  (1-x) + (1-y) <= 1 */
          else
          {
-            /* implication neg(x) + neg(y) <= 1 */
-            if( impltypes[j] == SCIP_BOUNDTYPE_LOWER )
-               isneighbor[jidx+nbinvars] = TRUE;
-            /* implication neg(x) + y <= 1 */
-            else
+            assert(impltypes[j] == SCIP_BOUNDTYPE_LOWER);
+            if ( ! isneighbor[jidx + nbinvars] )
             {
-               assert(impltypes[j] == SCIP_BOUNDTYPE_UPPER);
-               isneighbor[jidx] = TRUE;
+               ++nneighbors;
+               isneighbor[jidx + nbinvars] = TRUE;
             }
          }
       }
@@ -1876,39 +1833,40 @@ SCIP_RETCODE insertSortedRootNeighbors(
             kidx = sepadata->mapping[SCIPvarGetProbindex(cliquevars[k])];
             assert(kidx < nbinvars);
 
-            /* skip integral neighbors */
-            if( SCIPisFeasIntegral(scip, vals[kidx]))
-               continue;
-
             /* skip root */
             if( kidx == varsidx )
                continue;
 
+            /* skip integral neighbors */
+            if( SCIPisFeasIntegral(scip, vals[kidx]))
+               continue;
+
             if( cliquevals[k] == TRUE )
-               isneighbor[kidx] = TRUE;
+            {
+               if ( ! isneighbor[kidx] )
+               {
+                  ++nneighbors;
+                  isneighbor[kidx] = TRUE;
+               }
+            }
             else
             {
                assert(cliquevals[k] == FALSE);
-               isneighbor[kidx+nbinvars] = TRUE;
+               if ( ! isneighbor[kidx + nbinvars] )
+               {
+                  ++nneighbors;
+                  isneighbor[kidx+nbinvars] = TRUE;
+               }
             }
          }
       }
    }
 
    /* root cannot be part of the next level */
-   assert(!isneighbor[root]);
-
-   nneighbors = 0;
-   /* count root neighbors */
-   for( j = 0; j < graph->maxnodes; ++j )
-   {
-      if( isneighbor[j] )
-         ++nneighbors;
-   }
+   assert(! isneighbor[root]);
 
    /* allocate memory for sorting of root neighbors */
    SCIP_CALL( SCIPallocBufferArray(scip, &neighbors, (int) nneighbors) );
-   SCIP_CALL( SCIPallocBufferArray(scip, &neighvals, (int) nneighbors) );
    SCIP_CALL( SCIPallocBufferArray(scip, &sortvals, (int) nneighbors) );
 
    k = 0;
@@ -1917,17 +1875,14 @@ SCIP_RETCODE insertSortedRootNeighbors(
       if( isneighbor[j] )
       {
          assert(j != root);
+         assert(!SCIPisFeasIntegral(scip, vals[j]));
+
          neighbors[k] = (int) j;
-         neighvals[k] = vals[j];
-         assert(!SCIPisFeasIntegral(scip, neighvals[k]));
+         sortvals[k] = MIN(1.0 - vals[j], vals[j]);
          ++k;
       }
    }
    assert(k == nneighbors);
-
-   /* calculate fractionality of neighbors */
-   for( j = 0; j < nneighbors; ++j )
-      sortvals[j] = MIN(1-neighvals[j],neighvals[j]);
 
    /* sort neighbors by fractionality */
    SCIPsortDownRealInt(sortvals, neighbors, (int) nneighbors);
@@ -1941,32 +1896,32 @@ SCIP_RETCODE insertSortedRootNeighbors(
       int tmp;
 
       v = (unsigned int) neighbors[j];
+      assert( v < 2 * nbinvars );
 
       /* only the root is contained in the levelgraph */
-      assert(!inlevelgraph[v] || v == root+nbinvars || v == root-nbinvars);
+      assert(! inlevelgraph[v] || v == root+nbinvars || v == root-nbinvars);
 
       /* insert neighbor into levelgraph */
       ++(graph->nnodes);
-      graph->level[v] = level+1;
+      graph->level[v] = level + 1;
       inlevelgraph[v] = TRUE;
       newlevel[*nnewlevel] = v;
       ++(*nnewlevel);
 
-      assert(!SCIPisFeasIntegral(scip, vals[varsidx]));
-      assert(!SCIPisFeasIntegral(scip, neighvals[j]));
+      assert(! SCIPisFeasIntegral(scip, vals[varsidx]));
+      assert(! SCIPisFeasIntegral(scip, vals[v]));
 
       graph->targetForward[graph->lastF] = (int) v;
+      /* the computation of 1.0 - vals[v] if v is negated is ensured by the fact that v > nbinvars in this case */
       if( varfixing )
       {
-         tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - vals[varsidx] - neighvals[j]));
-         assert( tmp >= 0 );
+         tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - vals[varsidx] - vals[v]));
          graph->weightForward[graph->lastF] = (unsigned int) MAX(tmp, sepadata->maxreference);
       }
       else
       {
-         assert(varfixing == FALSE);
-         tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - (1.0-vals[varsidx]) - neighvals[j]));
-         assert( tmp >= 0 );
+         assert( ! varfixing );
+         tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - (1.0 - vals[varsidx]) - vals[v]));
          graph->weightForward[graph->lastF] = (unsigned int) MAX(tmp, sepadata->maxreference);
       }
       ++(graph->lastF);
@@ -1982,7 +1937,6 @@ SCIP_RETCODE insertSortedRootNeighbors(
    }
 
    /* free temporary memory */
-   SCIPfreeBufferArray(scip, &neighvals);
    SCIPfreeBufferArray(scip, &neighbors);
    SCIPfreeBufferArray(scip, &isneighbor);
 
@@ -2519,40 +2473,50 @@ SCIP_RETCODE separateHeur(
    unsigned int i;
    unsigned int j;
    unsigned int k;
+
    int nscipbinvars;
+   int nscipintvars;
+   int nscipimplvars;
+   int l;
 
    assert(scip != NULL);
    assert(sepadata != NULL);
    assert(result != NULL);
 
-   /* get variable data */
-   SCIP_CALL( SCIPgetVarsData(scip, &scipvars, NULL, &nscipbinvars, NULL, NULL, NULL) );
+   SCIP_CALL( SCIPgetVarsData(scip, &scipvars, NULL, &nscipbinvars, &nscipintvars, &nscipimplvars, NULL) );
+   assert(scipvars != NULL || (nscipbinvars + nscipintvars + nscipimplvars) == 0);
 
-   assert(scipvars != NULL || nscipbinvars == 0);
-
-   if( nscipbinvars == 0 )
-      return SCIP_OKAY;
+   /* collect binary variables, including implicit binary */
+   SCIP_CALL( SCIPallocBufferArray(scip, &vars, nscipbinvars + nscipintvars + nscipimplvars) );
+   for (l = 0; l < nscipbinvars; ++l)
+      vars[l] = scipvars[l];
 
    nbinvars = (unsigned int) nscipbinvars;
-   SCIP_CALL( SCIPallocBufferArray(scip, &vals, (int) (2 * nbinvars)) );
-
-   vars = NULL;
-   /* duplicate variable data array for sorting (if requested) */
-   if( sepadata->sortswitch != UNSORTED )
+   for (l = nscipbinvars; l < nscipbinvars + nscipintvars + nscipimplvars; ++l)
    {
-      SCIP_CALL( SCIPduplicateBufferArray(scip, &vars, scipvars, nscipbinvars) );
+      assert( SCIPvarGetType(scipvars[l]) != SCIP_VARTYPE_CONTINUOUS );
+      if ( SCIPvarIsBinary(scipvars[l]) )
+         vars[nbinvars++] = scipvars[l];
    }
 
+   if( nbinvars == 0 )
+   {
+      SCIPfreeBufferArray(scip, &vars);
+      return SCIP_OKAY;
+   }
+
+   /* initialize flag array to avoid multiple cuts per variable, if requested by user-flag */
+   SCIP_CALL( SCIPallocBufferArray(scip, &vals, (int) (2 * nbinvars)) );
+
+   /* prepare values */
+   assert( vars != NULL );
    switch( sepadata->sortswitch )
    {
    case UNSORTED :
       /* if no sorting is requested, we use the normal variable array */
-      vars = scipvars;
       break;
 
    case MAXIMAL_LPVALUE :
-      assert(vars != NULL);
-
       /* store lp-values */
       for( i = 0; i < nbinvars; ++i )
          vals[i] = SCIPgetSolVal(scip, sol, vars[i]);
@@ -2562,8 +2526,6 @@ SCIP_RETCODE separateHeur(
       break;
 
    case MINIMAL_LPVALUE :
-      assert(vars != NULL);
-
       /* store lp-values */
       for( i = 0; i < nbinvars; ++i )
          vals[i] = SCIPgetSolVal(scip, sol, vars[i]);
@@ -2573,8 +2535,6 @@ SCIP_RETCODE separateHeur(
       break;
 
    case MAXIMAL_FRACTIONALITY  :
-      assert(vars != NULL);
-
       /* store lp-values and determine fractionality */
       for( i = 0; i < nbinvars; ++i )
       {
@@ -2587,8 +2547,6 @@ SCIP_RETCODE separateHeur(
       break;
 
    case MINIMAL_FRACTIONALITY :
-      assert(vars != NULL);
-
       /* store lp-values and determine fractionality */
       for( i = 0; i < nbinvars; ++i )
       {
@@ -2607,10 +2565,20 @@ SCIP_RETCODE separateHeur(
    assert(vars != NULL);
 
    /* create mapping for getting the index of a variable via its probindex to the index in the sorted variable array */
-   SCIP_CALL( SCIPallocBufferArray(scip, &(sepadata->mapping), (int) nbinvars) );
-   for( i = 0; i < nbinvars; ++i )
-      sepadata->mapping[SCIPvarGetProbindex(vars[i])] = i;
+   SCIP_CALL( SCIPallocBufferArray(scip, &(sepadata->mapping), nscipbinvars + nscipintvars + nscipimplvars) );
 
+   /* initialize LP value and cut flag for all variables */
+   for( i = 0; i < nbinvars; ++i )
+   {
+      assert( 0 <= SCIPvarGetProbindex(vars[i]) && SCIPvarGetProbindex(vars[i]) < nscipbinvars + nscipintvars + nscipimplvars);  /* since binary, integer, and implicit variables are first */
+      sepadata->mapping[SCIPvarGetProbindex(vars[i])] = i;
+      vals[i] = SCIPgetSolVal(scip, sol, vars[i]); /* need to get new values, since they might be corrupted */
+   }
+
+   for( i = nbinvars; i < 2*nbinvars; ++i )
+      vals[i] = 1.0 - vals[i - nbinvars];
+
+   /* determine size of level graph */
    graph.maxnodes = 2 * nbinvars;
 
    /* the implication graph is redundant and therefore more implications and clique arcs may occur than should be possible
@@ -2636,9 +2604,9 @@ SCIP_RETCODE separateHeur(
    SCIP_CALL( SCIPallocBufferArray(scip, &curlevel, (int) graph.maxnodes) );
    SCIP_CALL( SCIPallocBufferArray(scip, &newlevel, (int) graph.maxnodes) );
    SCIP_CALL( SCIPallocBufferArray(scip, &graph.beginAdj, (int) graph.maxnodes) );
-   SCIP_CALL( SCIPallocBufferArray(scip, &graph.sourceAdj, (int) MIN(graph.sizeAdj,graph.maxarcs)) );
-   SCIP_CALL( SCIPallocBufferArray(scip, &graph.targetAdj, (int) MIN(graph.sizeAdj,graph.maxarcs)) );
-   SCIP_CALL( SCIPallocBufferArray(scip, &graph.weightAdj, (int) MIN(graph.sizeAdj,graph.maxarcs)) );
+   SCIP_CALL( SCIPallocBufferArray(scip, &graph.sourceAdj, (int) MIN(graph.sizeAdj, graph.maxarcs)) );
+   SCIP_CALL( SCIPallocBufferArray(scip, &graph.targetAdj, (int) MIN(graph.sizeAdj, graph.maxarcs)) );
+   SCIP_CALL( SCIPallocBufferArray(scip, &graph.weightAdj, (int) MIN(graph.sizeAdj, graph.maxarcs)) );
    SCIP_CALL( SCIPallocBufferArray(scip, &graph.levelAdj, (int) graph.maxnodes) );
    SCIP_CALL( SCIPallocBufferArray(scip, &inlevelgraph, (int) graph.maxnodes) );
 
@@ -2651,13 +2619,8 @@ SCIP_RETCODE separateHeur(
 
    SCIP_CALL( SCIPallocBufferArray(scip, &incut, (int) (2 * nbinvars)) );
 
-   /* initialize LP value and cut flag for all variables */
+   /* initialize cut flag for all variables */
    BMSclearMemoryArray(incut, 2*nbinvars);
-   for( i = 0; i < nbinvars; ++i )
-      vals[i] = SCIPgetSolVal(scip, sol, vars[i]);
-
-   for( i = nbinvars; i < 2*nbinvars; ++i )
-      vals[i] = 1 - vals[i-nbinvars];
 
    /* determine the number of level graph roots */
    maxroots = (unsigned int) SCIPceil(scip, sepadata->offsettestvars + (0.02 * nbinvars * sepadata->percenttestvars));
@@ -2938,10 +2901,7 @@ SCIP_RETCODE separateHeur(
    SCIPfreeBufferArray(scip, &graph.level);
 
    SCIPfreeBufferArray(scip, &(sepadata->mapping));
-   if( sepadata->sortswitch != UNSORTED )
-   {
-      SCIPfreeBufferArray(scip, &vars);
-   }
+   SCIPfreeBufferArray(scip, &vars);
    SCIPfreeBufferArray(scip, &vals);
 
    return SCIP_OKAY;
@@ -3099,42 +3059,42 @@ SCIP_RETCODE addGLSBinImpls(
       /* add implication for x==1 */
       if( original )
       {
-         /* implication to y=0 (I->III) */
+         /* implication to y=0 (I->III), i.e., x + y <= 1 */
          if( impltypes[m] == SCIP_BOUNDTYPE_UPPER )
          {
-            assert(implbounds[m] == 0.0);
+            assert( SCIPisEQ(scip, implbounds[m], 0.0) );
 
-            tmp = (int) SCIPfeasCeil(scip, sepadata->scale * ( 1 - vals[varsidx] - vals[neighindex] ));
+            tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - vals[varsidx] - vals[neighindex]));
             graph->weight[*narcs] = (unsigned int) MAX(0, tmp);
             graph->head[*narcs] = neighindex + 2 * nbinvars;
          }
-         /* implication to y=1 (I->IV) */
+         /* implication to y=1 (I->IV), i.e., x + (1-y) <= 1 */
          else
          {
-            assert(impltypes[m] == SCIP_BOUNDTYPE_LOWER && implbounds[m] == 1.0 );
+            assert( impltypes[m] == SCIP_BOUNDTYPE_LOWER && SCIPisEQ(scip, implbounds[m], 1.0) );
 
-            tmp = (int) SCIPfeasCeil(scip, sepadata->scale * ( 1 - vals[varsidx] - (1 - vals[neighindex]) ));
+            tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - vals[varsidx] - (1.0 - vals[neighindex])) );
             graph->weight[*narcs] = (unsigned int) MAX(0, tmp);
             graph->head[*narcs] = neighindex + 3 * nbinvars;
          }
       }
       else       /* add implication for x==0 */
       {
-         /* implication to y=0 (II->III) */
+         /* implication to y=0 (II->III), i.e., (1-x) + y <= 1 */
          if( impltypes[m] == SCIP_BOUNDTYPE_UPPER )
          {
             assert(implbounds[m] == 0.0);
 
-            tmp = (int) SCIPfeasCeil(scip, sepadata->scale * ( 1 - (1 - vals[varsidx]) - vals[neighindex] ));
+            tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - (1.0 - vals[varsidx]) - vals[neighindex]) );
             graph->weight[*narcs] = (unsigned int) MAX(0, tmp);
             graph->head[*narcs] = neighindex + 2 * nbinvars;
          }
-         /* implication to y=1 (II->IV) */
+         /* implication to y=1 (II->IV), i.e., (1-x) + (1-y) <= 1 */
          else
          {
             assert(impltypes[m] == SCIP_BOUNDTYPE_LOWER && implbounds[m] == 1.0 );
 
-            tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1 - (1 - vals[varsidx]) - (1 - vals[neighindex]) ));
+            tmp = (int) SCIPfeasCeil(scip, sepadata->scale * (1.0 - (1.0 - vals[varsidx]) - (1.0 - vals[neighindex])) );
             graph->weight[*narcs] = (unsigned int) MAX(0, tmp);
             graph->head[*narcs] = neighindex + 3 * nbinvars;
          }
@@ -3407,7 +3367,6 @@ SCIP_RETCODE separateGLS(
    }
 
    /* initialize flag array to avoid multiple cuts per variable, if requested by user-flag */
-   SCIP_CALL( SCIPallocBufferArray(scip, &incut, (int) (4 * nbinvars)) );
    SCIP_CALL( SCIPallocBufferArray(scip, &vals, (int) (2 * nbinvars)) );
 
    /* prepare values */
@@ -3468,6 +3427,7 @@ SCIP_RETCODE separateGLS(
 
    /* create mapping for getting the index of a variable via its probindex to the index in the sorted variable array */
    SCIP_CALL( SCIPallocBufferArray(scip, &(sepadata->mapping), nscipbinvars + nscipintvars + nscipimplvars) );
+   SCIP_CALL( SCIPallocBufferArray(scip, &incut, (int) (4 * nbinvars)) );
    BMSclearMemoryArray(incut, 4 * nbinvars);
 
    /* initialize LP value and cut flag for all variables */
@@ -3824,17 +3784,10 @@ SCIP_RETCODE separateGLS(
    SCIPfreeBufferArray(scip, &graph.head);
    SCIPfreeBufferArray(scip, &graph.outcnt);
    SCIPfreeBufferArray(scip, &graph.outbeg);
-
-   SCIPfreeBufferArray(scip, &(sepadata->mapping));
-
-   /* remove variable data array if duplicated */
-   if( sepadata->sortswitch != UNSORTED )
-   {
-      SCIPfreeBufferArray(scip, &vars);
-   }
-
-   SCIPfreeBufferArray(scip, &vals);
    SCIPfreeBufferArray(scip, &incut);
+   SCIPfreeBufferArray(scip, &(sepadata->mapping));
+   SCIPfreeBufferArray(scip, &vars);
+   SCIPfreeBufferArray(scip, &vals);
 
    return SCIP_OKAY;
 }
