@@ -41,7 +41,8 @@ fixed bugs:
 - fixed bug in cons_integral: need to make sure that all implicit integer variables are integral when a solution is
   checked
 - fixed bug in cons_abspower: wrong infinity check when propagating bounds
-- fixed bug in sepa_oddcylce: number of arcs have to be adjusted
+- fixed bugs in sepa_oddcylce: number of arcs have to be adjusted, handle implicit binary variables,
+  fixed bug in heuristic separation method, fixed asserts
 
 features:
 - can now output the solutions in the solution pool in the interactive shell
